testcrate/tests/ui/insert_expr.stderr
error[E0308]: mismatched types
  --> $DIR/insert_expr.rs:52:32
   |
52 |     sql!(Table.insert(field1 = value, i32_field = 91, field2 = "test")).unwrap();
   |                                ^^^^^ expected &str, found integral variable
   |
   = note: expected type `&str`
              found type `{integer}`

error: aborting due to previous error

